--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -416,6 +416,7 @@
     <dimen name="qrcode_preview_margin">40dp</dimen>
     <dimen name="qrcode_preview_radius">30dp</dimen>
     <dimen name="qrcode_icon_size">27dp</dimen>
+
     <!-- Margin for SD card setup completion Image -->
     <dimen name="setup_completion_margin_top">88dp</dimen>
 
@@ -443,4 +444,9 @@
     <dimen name="screen_flash_color_button_inner_circle_size">42dp</dimen>
     <dimen name="screen_flash_color_button_inner_circle_padding">3dp</dimen>
     <dimen name="screen_flash_color_button_inner_circle_stroke">1dp</dimen>
+    <!-- Category Headers -->
+    <dimen name="x_preference_category_padding_top">0.0dip</dimen>
+    <dimen name="x_preference_category_line_margin_start">10.0dip</dimen>
+    <dimen name="x_preference_category_height">40.0dip</dimen>
+
 </resources>
