Settings: Toggle vertical swipes on Ambient display [2/2]
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>
Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/res/values/sigma_strings.xml
+++ b/res/values/sigma_strings.xml
@@ -54,4 +54,9 @@
     <string name="ignore_window_secure_title">Ignore window secure flags</string>
     <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
 
+    <!-- Ambient Display Swipe Gesture -->
+    <string name="ambient_gesture_title">Gestures</string>
+    <string name="ambient_swipe_title">Swipe to wake</string>
+    <string name="ambient_swipe_summary">Allow waking the device by swiping up or down when the device is dozing</string>
+
 </resources>
