--- a/res/values/sigma_strings.xml
+++ b/res/values/sigma_strings.xml
@@ -47,4 +47,8 @@
     <string name="sigma_model_info">Device Information</string>
     <string name="sigma_build_date_title">Build Date</string>
 
+    <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore window secure flags</string>
+    <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
+
 </resources>
