--- a/res-ui/layout/dot_pref_card_sin-accent.xml
+++ b/res-ui/layout/dot_pref_card_sin-accent.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2020 Project dotOS
+<!--
+     Copyright 2021 xdroid, xyzprjkt
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -7,20 +8,21 @@
 
           http://www.apache.org/licenses/LICENSE-2.0
 
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-    <dimen name="contextual_card_stroke_width">1dp</dimen>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
+    style="@style/dotPreferenceFullAccent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <dimen name="storage_card_min_width">148dp</dimen>
-    <dimen name="storage_card_min_height">@dimen/storage_card_min_width</dimen>
-    <dimen name="dot_radius">18dp</dimen>
-    <dimen name="dot_radius_merge">5dp</dimen>
-    <dimen name="dot_pref_horizontal_padding">16dp</dimen>
-    <dimen name="dot_pref_horizontal_padding-negative">-16dp</dimen>
-</resources>
+    <include
+        layout="@layout/dot_pref"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</FrameLayout>
