--- a/res-ui/layout/alpha_dashboard_preference_full.xml
+++ b/res-ui/layout/alpha_dashboard_preference_full.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2021 AOSP-Krypton Project
+     Copyright 2021 xdroid, xyzprjkt
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,25 +15,14 @@
      limitations under the License.
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
+    style="@style/alphaDashboardPreferenceFull"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/apps_list"
+    <include
+        layout="@layout/dot_dashboard_pref"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp">
+        android:layout_height="wrap_content" />
 
-         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:scaleType="fitCenter"
-            android:layout_marginTop="80dp"
-            android:layout_marginBottom="30dp"
-            android:src="@drawable/alphabet_header" />
-
-    </LinearLayout>
 </FrameLayout>
