Settings: Show SoC Model rather than value of ro.board.platform if available
* These properties were introduced in S, so why not use them?

Change-Id: I2abb584e140841c03f8daa7cc6c0107f24a0e234

--- a/res/values/banana_strings.xml
+++ b/res/values/banana_strings.xml
@@ -25,6 +25,9 @@
 
     <!-- Hardware info -->
     <string name="platform_revision">Platform</string>
+    <string name="total_ram">Total RAM</string>
+
+    <!-- Hardware info -->
     <string name="soc_model">SoC Model</string>
     <string name="total_ram">Total RAM</string>
 
