--- a/res/values/sigma_strings.xml
+++ b/res/values/sigma_strings.xml
@@ -47,4 +47,7 @@
     <string name="sigma_model_info">Device Information</string>
     <string name="sigma_build_date_title">Build Date</string>
 
+    <!-- Ambient wake toggles -->
+    <string name="doze_gesture_ambient_title">Show Ambient</string>
+    <string name="doze_gesture_ambient_summary">Show Ambient Display instead of fully waking the screen up</string>
 </resources>
