Update all references to ALPHA_VERSION to SIGMA_VERSION
* For the About Info population

Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -72,7 +72,7 @@
 
         <!-- AlphaDroid version -->
         <com.android.settings.deviceinfo.firmwareversion.AlphaVersionPreference
-            android:key="alpha_version"
+            android:key="sigma_version"
             android:title="@*lineageos.platform:string/lineage_version"
             android:summary="@string/summary_placeholder"
             android:icon="@drawable/ic_alpha"
