Replace AlphaDroid logo with SigmaDroid
* SigmaDroid drawables and vectors

Signed-off-by: Matt Filetto <matt.filetto@gmail.com>

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -21,9 +21,9 @@
     android:title=" "
     settings:keywords="@string/keywords_android_version">
 
-    <!-- Alpha logo -->
+    <!-- SigmaDroid logo -->
     <PreferenceScreen
-        android:key="alpha_logo"
+        android:key="sigma_logo"
         android:selectable="false" />
 
     <Preference
