--- a/res-ui/layout/sigma_logo.xml
+++ b/res-ui/layout/sigma_logo.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/alpha_logo" />
+            android:src="@drawable/sigma_logo" />
 
     </LinearLayout>
 </FrameLayout>
