--- a/res-ui/layout/settings_sigma_toolbox_header.xml
+++ b/res-ui/layout/settings_sigma_toolbox_header.xml
@@ -14,15 +14,27 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
-    style="@style/alphaDashboardPreferenceFull"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <include
-        layout="@layout/dot_dashboard_pref"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="24dp">
 
+         <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:scaleType="fitCenter"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/sigma_toolbox_header" />
+
+    </LinearLayout>
 </FrameLayout>
