--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -21,13 +21,13 @@
     android:key="top_level_settings">
 
     <com.android.settings.widget.HomepagePreference
-        android:key="top_level_alpha_settings"
-        android:title="@string/alpha_settings_title"
-        android:summary="@string/alpha_settings_summary"
+        android:key="top_level_sigma_settings"
+        android:title="@string/sigma_settings_title"
+        android:summary="@string/sigma_settings_summary"
         android:order="-204"
-        android:icon="@drawable/ic_settings_alpha"
-        android:fragment="com.alpha.settings.AlphaSettings"
-        settings:controller="com.alpha.settings.TopLevelAlphaEntryPreferenceController" />
+        android:icon="@drawable/ic_settings_sigma"
+        android:fragment="com.sigma.settings.SigmaSettings"
+        settings:controller="com.sigma.settings.TopLevelSigmaEntryPreferenceController" />
 
     <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.network.NetworkDashboardFragment"
