--- a/res/values/sigma_strings.xml
+++ b/res/values/sigma_strings.xml
@@ -25,6 +25,7 @@
 
     <!-- Hardware info -->
     <string name="platform_revision">Platform</string>
+    <string name="soc_model">SoC Model</string>
     <string name="total_ram">Total RAM</string>
 
     <!-- String for removal of sensitive info on about, depending on tap -->
