--- a/res-ui/layout/dot_pref_no_chevron.xml
+++ b/res-ui/layout/dot_pref_no_chevron.xml
@@ -33,7 +33,7 @@
 
         <com.android.internal.widget.PreferenceImageView
             android:id="@android:id/icon"
-            android:tint="@color/dot_primary_color"
+            android:tint="@color/sigma_color_accent2"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:adjustViewBounds="true"
