--- a/res/xml/double_tap_screen_settings.xml
+++ b/res/xml/double_tap_screen_settings.xml
@@ -34,7 +34,7 @@
         app:controller="com.android.settings.gestures.DoubleTapScreenPreferenceController"
         app:allowDividerAbove="true" />
 
-    <com.alpha.settings.preferences.SecureSettingSwitchPreference
+    <com.sigma.settings.preferences.SecureSettingSwitchPreference
         android:key="doze_double_tap_gesture_ambient"
         android:title="@string/doze_gesture_ambient_title"
         android:summary="@string/doze_gesture_ambient_summary"
