--- a/res/layout/sigma_info.xml
+++ b/res/layout/sigma_info.xml
@@ -27,7 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="50dp">
 
         <LinearLayout
             android:layout_width="match_parent"
