--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -48,7 +48,7 @@
         android:summary="@string/advanced_battery_preference_summary"
         settings:searchable="false" />
 
-    <com.alpha.settings.preferences.SystemSettingSwitchPreference
+    <com.sigma.settings.preferences.SystemSettingSwitchPreference
         android:key="battery_24_hrs_stats"
         android:title="@string/advanced_battery_preference_summary_google"
         android:defaultValue="false"
@@ -77,9 +77,9 @@
         settings:searchable="true" />
 
     <!-- Charging control -->
-    <lineageos.preference.LineagePartsPreference
+    <!--<lineageos.preference.LineagePartsPreference
         android:key="charging_control"
-        settings:requiresService="lineagehealth" />
+        settings:requiresService="lineagehealth" />-->
 
     <Preference
         android:key="high_power_apps"
