--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -25,7 +25,7 @@
         <com.android.settingslib.widget.LayoutPreference
             android:key="sigma_info"
             android:layout="@layout/sigma_info"
-            android:order="2"
+            android:order="1"
             android:selectable="false" />
 
         <!-- SigmaDroid logo -->
@@ -42,22 +42,81 @@
             android:order="5"
             android:selectable="true"/>
 
-        <!-- Device Information -->
-        <Preference
-            android:key="device_model"
+         <!-- Device name -->
+        <com.android.settings.widget.ValidatedEditTextPreference
+            android:key="device_name"
             android:order="6"
-            android:title="@string/sigma_model_info"
-            android:icon="@drawable/ic_model_hardware"
+            android:icon="@drawable/phone_tint"
+            android:title="@string/my_device_info_device_name_preference_title"
             android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
+            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
+            settings:enableCopying="true"/>
+
+        <!-- Build number -->
+        <Preference
+            android:key="build_number"
+            android:order="7"
+            android:icon="@drawable/ic_info"
+            android:title="@string/build_number"
+            android:summary="@string/summary_placeholder"
             settings:enableCopying="true"
-            settings:keywords="@string/keywords_model_and_hardware"
-            settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/> 
+            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
+
+        <!-- Baseband -->
+        <Preference
+            android:key="base_band"
+            android:order="8"
+            android:title="@string/baseband_version"
+            android:summary="@string/summary_placeholder"
+            android:icon="@drawable/ic_android"
+            settings:enableCopying="true"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.BasebandVersionPreferenceController"/>
+
+        <!-- Kernel -->
+        <com.android.settings.deviceinfo.firmwareversion.KernelVersionPreference
+            android:key="kernel_version"
+            android:order="9"
+            android:title="@string/kernel_version"
+            android:summary="@string/summary_placeholder"
+            android:icon="@drawable/ic_kernel"
+            settings:enableCopying="true"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
+
+        <!-- SELinux -->
+        <Preference
+            android:key="selinux_status"
+            android:order="10"
+            android:title="@string/selinux_status"
+            android:summary="@string/summary_placeholder"
+            android:icon="@drawable/ic_selinux"
+            settings:enableCopying="true"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.SElinuxStatusPreferenceController"/>
+
+        <!-- Android version -->
+        <Preference
+            android:key="os_firmware_version"
+            android:order="11"
+            android:title="@string/firmware_version"
+            android:icon="@drawable/ic_android_head"
+            android:summary="@string/summary_placeholder"
+            settings:enableCopying="true"
+            settings:searchable="false"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
+        
+        <!-- Account name -->
+        <Preference
+            android:key="branded_account"
+            android:order="12"
+            android:icon="@drawable/ic_cog"
+            android:title="@string/my_device_info_account_preference_title"
+            android:summary="@string/summary_placeholder"
+            settings:enableCopying="true"
+            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
 
         <!-- Phone number -->
         <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
             android:key="phone_number"
-            android:order="8"
+            android:order="13"
             android:title="@string/status_number"
             android:icon="@drawable/phone_tint"
             android:summary="@string/summary_placeholder"
@@ -65,55 +124,103 @@
             settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
             settings:enableCopying="true"/>
 
+        <!-- Security patch -->
+        <Preference
+            android:key="security_key"
+            android:order="15"
+            android:title="@string/security_patch"
+            android:icon="@drawable/ic_security_patch"
+            settings:enableCopying="true"
+            settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
 
-         <!-- Device name -->
-        <com.android.settings.widget.ValidatedEditTextPreference
-            android:key="device_name"
-            android:order="14"
-            android:icon="@drawable/phone_tint"
-            android:title="@string/my_device_info_device_name_preference_title"
+       <!-- Device up time -->
+        <Preference
+            android:key="up_time"
+            android:order="16"
+            android:icon="@drawable/ic_cog"
+            android:title="@string/status_up_time"
+            android:summary="@string/summary_placeholder" />
+
+        <!-- Device deep sleep time -->
+        <Preference
+            android:key="sleep_time"
+            android:order="17"
+            android:icon="@drawable/ic_sleep"
+            android:title="@string/status_sleep_time"
+            android:summary="@string/summary_placeholder" />
+
+        <Preference
+            android:order="18"
+            android:title="@string/my_device_info_device_identifiers_category_title"/>
+        
+        <!-- SIM status -->
+        <Preference
+            android:key="sim_status"
+            android:order="19"
+            android:icon="@drawable/ic_sim_card"
+            android:title="@string/sim_status_title"
+            settings:keywords="@string/keywords_sim_status"
             android:summary="@string/summary_placeholder"
-            settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
+            settings:isPreferenceVisible="@bool/config_show_sim_info"
             settings:enableCopying="true"/>
 
-        <!-- Account name -->
+        <!-- IMEI -->
+        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
+            android:key="imei_info"
+            android:order="21"
+            android:title="@string/status_imei"
+            android:icon="@drawable/phone_tint"
+            android:summary="@string/summary_placeholder"
+            settings:keywords="@string/keywords_imei_info"
+            settings:enableCopying="true"
+            settings:isPreferenceVisible="@bool/config_show_sim_info"
+            settings:controller="com.android.settings.deviceinfo.imei.ImeiInfoPreferenceController"/>
+
+            <Preference
+            android:title="@string/radio_info_title"
+            android:key="radio_info_settings"
+            android:order="23"
+            android:icon="@drawable/phone_tint"
+            settings:controller="com.android.settings.deviceinfo.RadioInfoPreferenceController">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.phone"
+                    android:targetClass="com.android.phone.settings.RadioInfo" />
+        </Preference>
+
+        <!--IP address -->
         <Preference
-            android:key="branded_account"
-            android:order="15"
-            android:icon="@drawable/ic_cog"
-            android:title="@string/my_device_info_account_preference_title"
+            android:key="wifi_ip_address"
+            android:order="24"
+            android:icon="@drawable/ic_settings_wireless"
+            android:title="@string/wifi_ip_address"
             android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
+            settings:enableCopying="true"/>
 
-        <!-- Build number -->
+        <!-- Wi-Fi MAC address -->
         <Preference
-            android:key="build_number"
-            android:order="16"
-            android:icon="@drawable/ic_info"
-            android:title="@string/build_number"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
+            android:key="saved_accesspoints_wifi_mac_address"
+            android:order="25"
+            android:icon="@drawable/ic_settings_wireless"
+            android:title="@string/status_wifi_mac_address"
+            android:summary="@string/view_saved_network"
+            android:fragment="com.android.settings.wifi.savedaccesspoints2.SavedAccessPointsWifiSettings2"
+            settings:enableCopying="false"/>
 
-        <!-- SELinux -->
+        <!-- Factory Wi-Fi MAC address -->
         <Preference
-            android:key="selinux_status"
-            android:order="17"
-            android:title="@string/selinux_status"
+            android:key="wifi_mac_address"
+            android:order="26"
+            android:icon="@drawable/ic_settings_wireless"
+            android:title="@string/status_device_wifi_mac_address"
             android:summary="@string/summary_placeholder"
-            android:icon="@drawable/ic_selinux"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.SElinuxStatusPreferenceController"/>
+            settings:enableCopying="true"/>
 
-        <!-- Kernel -->
-        <com.android.settings.deviceinfo.firmwareversion.KernelVersionPreference
-            android:key="kernel_version"
-            android:order="18"
-            android:title="@string/kernel_version"
+        <!-- Bluetooth address -->
+        <Preference
+            android:key="bt_address"
+            android:order="27"
+            android:icon="@drawable/ic_bluetooth_disabled"
+            android:title="@string/status_bt_address"
             android:summary="@string/summary_placeholder"
-            android:icon="@drawable/ic_kernel"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
-
+            settings:enableCopying="true"/>
 </PreferenceScreen>
