--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -22,10 +22,11 @@
     android:title="@string/firmware_version"
     settings:keywords="@string/keywords_android_version">
 
+    <!-- Alpha logo -->
     <com.android.settingslib.widget.LayoutPreference
-        android:key="matrixx_about"
-        android:layout="@layout/matrixx_about"
-        android:selectable="false"/>
+        android:layout="@layout/alpha_logo"
+        android:key="alpha_logo"
+        android:selectable="false" />
 
     <!-- Device name -->
     <Preference
@@ -45,13 +46,12 @@
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
     <!-- Lineage version -->
-    <Preference
+    <!--Preference
         android:key="lineage_version"
         android:title="@*lineageos.platform:string/lineage_version"
         android:summary="@string/summary_placeholder"
-        settings:enableCopying="false"
-        android:selectable="false"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/-->
 
     <!-- Matrixx maintainer  -->
     <Preference
@@ -68,24 +68,6 @@
         android:title="@string/security_patch"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
-
-    <!-- Vendor security patch -->
-    <Preference
-        android:key="vendor_security_key"
-        android:title="@*lineageos.platform:string/lineage_vendor_security_patch"
-        android:selectable="false"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVendorSecurityPatchLevelPreferenceController"/>
-
-    <!-- Mainline module version -->
-    <!--
-    <Preference
-        android:key="module_version"
-        android:title="@string/module_version"
-        android:summary="@string/summary_placeholder"
-        settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.MainlineModuleVersionPreferenceController"/>
-    -->
 
     <!-- Baseband -->
     <Preference
