--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -47,6 +47,14 @@
         settings:controller="com.crdroid.settings.TopLevelSettingsPreferenceController"/>
 
     <com.android.settings.widget.HomepagePreference
+        android:key="top_level_alpha_settings"
+        android:title="@string/alpha_settings_title"
+        android:summary="@string/alpha_settings_summary"
+        android:order="-204"
+        android:fragment="com.alpha.settings.AlphaSettings"
+    settings:controller="com.alpha.settings.TopLevelAlphaEntryPreferenceController" />
+
+    <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.network.NetworkDashboardFragment"
         android:icon="@drawable/ic_settings_wireless"
         android:key="top_level_network"
@@ -87,8 +95,8 @@
 
     <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.notification.ConfigureNotificationSettings"
-        android:icon="@drawable/ic_notifications"
         android:key="top_level_notifications"
+        android:icon="@drawable/ic_notifications"
         android:order="-120"
         android:title="@string/configure_notification_settings"
         android:summary="@string/notification_dashboard_summary"
