--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -44,13 +44,13 @@
         settings:searchable="false"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
-    <!-- Lineage version -->
-    <!--Preference
-        android:key="lineage_version"
+    <!-- Alpha version -->
+    <Preference
+        android:key="alpha_version"
         android:title="@*lineageos.platform:string/lineage_version"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/-->
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.AlphaVersionPreferenceController"/>
 
     <!-- Security patch -->
     <Preference
