--- a/res/layout/settings_main_prefs.xml
+++ b/res/layout/settings_main_prefs.xml
@@ -38,37 +38,35 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_weight="0"
-                    android:visibility="gone"
-                    style="@style/SudGlifButtonBar">
+                    android:visibility="gone">
 
         <Button android:id="@+id/back_button"
-                android:layout_width="wrap_content"
+                android:layout_width="150dip"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dip"
                 android:layout_alignParentStart="true"
-                android:text="@*android:string/back_button_label"
-                style="@style/SudGlifButton.Secondary"/>
+                android:text="@*android:string/back_button_label"/>
 
-        <RelativeLayout
+        <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true">
 
             <Button android:id="@+id/skip_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dip"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
+                    android:layout_margin="5dip"
                     android:text="@*android:string/skip_button_label"
-                    android:visibility="gone"
-                    style="@style/SudGlifButton.Secondary"/>
+                    android:visibility="gone"/>
 
             <Button android:id="@+id/next_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dip"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:text="@*android:string/next_button_label"
-                    style="@style/SudGlifButton.Primary"/>
+                    android:layout_margin="5dip"
+                    android:text="@*android:string/next_button_label"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </RelativeLayout>
 
