--- a/res/layout/settings_homepage_app_bar_regular_phone_layout.xml
+++ b/res/layout/settings_homepage_app_bar_regular_phone_layout.xml
@@ -17,79 +17,39 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/colorBackground"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/homepage_title_margin_top"
-        android:orientation="horizontal"
-        android:elevation="0.0dip"
-        app:layout_collapseMode="pin">
-        	
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="76dp"
-            android:orientation="vertical" >
+        android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/homepage_title"
-                style="@style/HomepageTitleText"
-                android:layout_width="0dp"
-                android:layout_weight="1" />
+        <TextView
+            android:id="@+id/homepage_title"
+            android:text="@string/settings_label"
+            style="@style/HomepageTitleText"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
 
-            <include layout="@layout/search_bar"/>
-            
-        </LinearLayout>
-        
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="27.0dip"
-            android:layout_alignParentEnd="true"
-            android:orientation="horizontal" >
-      
-            <!--Toolbar
-                android:id="@+id/search_icon_bar"
-                android:layout_width="@dimen/search_bar_height"
-                android:layout_height="@dimen/search_bar_height"
-                android:minWidth="58dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:paddingEnd="4dp"
-                android:paddingStart="4dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:background="@drawable/nad_top_bg"
-                android:backgroundTint="@android:color/system_neutral1_10"
-                android:visibility="gone"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:accessibilityTraversalAfter="@id/homepage_title"
-                android:layout_marginEnd="8dp"
-                android:navigationIcon="@drawable/ic_homepage_search"/-->
-
-            <ImageView
-                android:id="@+id/account_avatar"
-                android:layout_width="@dimen/avatar_length"
-                android:layout_height="@dimen/avatar_length"
-                android:layout_marginEnd="@dimen/avatar_margin_end"
-                android:visibility="invisible"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:accessibilityTraversalAfter="@id/homepage_title"
-                android:contentDescription="@string/search_bar_account_avatar_content_description" />
-            
-        </LinearLayout>
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/account_avatar"
+            android:layout_width="@dimen/avatar_length"
+            android:layout_height="@dimen/avatar_length"
+            android:layout_marginEnd="@dimen/avatar_margin_end"
+            android:visibility="invisible"
+            android:accessibilityTraversalAfter="@id/homepage_title"
+            android:contentDescription="@string/search_bar_account_avatar_content_description" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/suggestion_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <include layout="@layout/search_bar"/>
 
 </LinearLayout>
