TopLevelSettings:  add sigma icon + update some strings

--- a/res-ui/layout/nad_top_menu.xml
+++ b/res-ui/layout/nad_top_menu.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/alpha_settings"
+        android:id="@+id/sigma_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="?android:attr/listPreferredItemPaddingEnd"
@@ -43,7 +43,7 @@
                 app:maxHeight="48dp"
                 android:paddingVertical="4dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_settings_alpha" />
+                android:src="@drawable/ic_settings_sigma" />
         </FrameLayout>
 
         <LinearLayout
@@ -60,7 +60,7 @@
                 android:layout_weight="1"
                 android:ellipsize="marquee"
                 android:singleLine="true"
-                android:text="@string/alpha_settings_title"
+                android:text="@string/sigma_settings_title"
                 android:textAppearance="?android:attr/textAppearanceListItem"
                 android:textColor="?android:attr/textColorPrimary"
                 android:textDirection="locale" />
@@ -71,7 +71,7 @@
                 android:layout_weight="1"
                 android:ellipsize="marquee"
                 android:singleLine="true"
-                android:text="@string/alpha_settings_summary"
+                android:text="@string/sigma_settings_summary"
                 style="@style/PreferenceSummaryTextStyle"
                 android:textColor="?android:attr/textColorPrimary" />
         </LinearLayout>
